# apps-benchmark

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.html  BUILD.html  CHANGELOG.html  CONTRIBUTING.html  DIY_BACKEND.html  DIY_BENCHMARK.html  DIY_GUIDE.html  DIY_REGISTRY.html  LICENSE  LICENSE.html  NOTICE  README.html  README.md  TESTING.html  build_docs.sh  human_notes.md  index.html  pyproject.toml  style.css
.github/workflows/: docs-to-html.yml
apps_benchmark/: __init__.py  cli.py  errors.py
apps_benchmark/backends/: __init__.py  ionq_cloud_backend.py  mock_backend.py  qiskit_aer_sim_backend.py
apps_benchmark/benchmarks/: __init__.py
apps_benchmark/benchmarks/chemistry/: __init__.py
apps_benchmark/benchmarks/chemistry/algorithms/: __init__.py  vqe_puccd_runner.py
apps_benchmark/benchmarks/chemistry/benchmark_cases/: h002_chain_0_75.json  h002_chain_1_00.json  h002_chain_1_25.json  h002_chain_1_50.json  h002_chain_1_75.json  h002_chain_2_00.json  h004_chain_0_75.json  h004_chain_1_00.json  h004_chain_1_25.json  h004_chain_1_50.json  h004_chain_1_75.json  h004_chain_2_00.json  h006_chain_0_75.json  h006_chain_1_00.json  h006_chain_1_25.json  h006_chain_1_50.json  h006_chain_1_75.json  h006_chain_2_00.json  h008_chain_0_75.json  h008_chain_1_00.json  h008_chain_1_25.json  h008_chain_1_50.json  h008_chain_1_75.json  h008_chain_2_00.json  h010_chain_0_75.json  h010_chain_1_00.json  h010_chain_1_25.json  h010_chain_1_50.json  h010_chain_1_75.json  h010_chain_2_00.json  h012_chain_0_75.json  h012_chain_1_00.json  h012_chain_1_25.json  h012_chain_1_50.json  h012_chain_1_75.json  h012_chain_2_00.json  h014_chain_0_75.json  h014_chain_1_00.json  h014_chain_1_25.json  h014_chain_1_50.json  (+14 more)
apps_benchmark/benchmarks/chemistry/qc_afqmc/: README.md  qcafqmc_schema.json
apps_benchmark/benchmarks/computational_fluid_dynamics/: README.md  __init__.py  qlbm_schema.json
apps_benchmark/benchmarks/computational_fluid_dynamics/algorithms/: __init__.py
apps_benchmark/benchmarks/computational_fluid_dynamics/benchmark_cases/: qlbm_16by16_2d_advection_diffusion.json  qlbm_case.json
apps_benchmark/benchmarks/hidden_shift/: __init__.py
apps_benchmark/benchmarks/high_energy_physics/: __init__.py
apps_benchmark/benchmarks/image_loading/: README.md  __init__.py  asset_manifest.json
apps_benchmark/benchmarks/machine_learning/: README.md  __init__.py  qcnn_support.py
apps_benchmark/benchmarks/optimization/: __init__.py
apps_benchmark/benchmarks/qft/: __init__.py
apps_benchmark/benchmarks/qft/algorithms/: __init__.py  (+2 more)
apps_benchmark/benchmarks/unstructured_search/: __init__.py
apps_benchmark/core/: __init__.py  backend.py  benchmark.py  qc_benchmark_runner.py  registry.py
apps_benchmark/primitives/: __init__.py  benchmark_case.py
apps_benchmark/utils/: __init__.py  cli_config.py  config.py  file_ops.py  validation.py
docs/: API_REFERENCE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DIY_BACKEND.md  DIY_BENCHMARK.md  DIY_GUIDE.md  DIY_REGISTRY.md  LICENSE.md  README.md  TESTING.md
docs/diagrams/: project_function_calls_and_dependencies.dot
docs_html/: BUILD.html  LICENSE.html  README.html  index.html  style.css
tests/: __init__.py  test_cli.py
tests/test_backends/: __init__.py  test_mock_backend.py  test_qiskit_aer_sim_backend.py
tests/test_benchmarks/: __init__.py
tests/test_benchmarks/test_chemistry/: __init__.py  conftest.py  test_benchmark_cases.py  test_vqe_puccd_runner.py  test_vqe_runner.py
tests/test_benchmarks/test_computational_fluid_dynamics/: __init__.py  test_qlbm_benchmark_case.py
tests/test_benchmarks/test_hidden_shift/: __init__.py  test_hidden_shift_runner.py
tests/test_benchmarks/test_high_energy_physics/: __init__.py  test_trotterized_evolution_runner.py
tests/test_benchmarks/test_image_loading/: __init__.py  test_image_loading_runner.py
tests/test_benchmarks/test_machine_learning/: __init__.py  test_qcnn_runner.py
tests/test_benchmarks/test_optimization/: test_qcbm_copula_runner.py
tests/test_benchmarks/test_qft/: __init__.py  conftest.py  test_benchmark_cases.py  test_qft_runners.py
tests/test_core/: __init__.py  test_backend_interface.py  test_backend_registration.py  test_benchmark_interface.py  test_category_execution.py  test_config_precedence.py  test_qc_benchmark_runner.py  test_registry.py  test_result_aggregation.py
tests/test_utils/: __init__.py  test_cli_config.py  test_config.py  test_errors.py
(+1568 files in other folders)
