[project]
name = "apps-benchmark"
version = "1.0.0"
description = "IonQ Quantum Application Benchmarking Framework"
readme = "README.md"
requires-python = ">=3.12"
license = "CC-BY-NC-ND-4.0"
authors = [
    {name = "IonQ Applications Team", email = "apps@ionq.com"}
]
keywords = ["quantum", "benchmarking", "quantum computing", "ionq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "click>=8.1.0",           # CLI framework
    "networkx>=3.0",          # Graph algorithms for QAOA/LR-QAOA
    "numpy>=1.24.0",          # Numerical operations
    "pandas>=2.0.0",          # DataFrame for results, timestamps
    "Pillow>=10.0.0",         # Image loading for closed image-loading benchmarks
    "pydantic>=2.0.0",        # Data validation and settings
    "pyqsp>=0.1.6",           # Quantum Signal Processing for FAA
    "qiskit==2.3.1",          # Quantum circuits (used in interfaces)
    "qiskit-aer==0.17.2",     # Qiskit Aer simulator backend
    "qiskit-ionq>=0.4.0",     # IonQ backend via Qiskit
    "qiskit-qasm3-import>=0.6.0",  # QASM3 circuit import support
    "requests>=2.31.0",       # HTTP library for IonQ Cloud backend
    "scipy>=1.10.0",          # Optimization algorithms
]

[project.optional-dependencies]
# Built-in backend dependencies are now in main dependencies above
backends = []

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",    # Parallel testing
    "ruff>=0.13.0",           # Linting and formatting
    "mypy>=1.5.0",            # Type checking
    "pandas-stubs",           # Pandas type hints
    "types-networkx",         # NetworkX type hints
    "types-requests",         # Requests type hints
    "pre-commit>=4.0.0",      # Git hooks
]

# Documentation dependencies
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",     # Markdown support in Sphinx
]

[project.scripts]
apps-benchmark = "apps_benchmark.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps_benchmark*"]

[tool.setuptools.package-data]
apps_benchmark = [
    "benchmarks/*/asset_manifest.json",
    "benchmarks/*/benchmark_cases/*.json",
    "benchmarks/*/benchmark_cases/*.gml",
    "benchmarks/*/benchmark_cases/*/*.json",
    "benchmarks/*/benchmark_cases/*.qasm3",
    "benchmarks/*/assets/*.json",
    "benchmarks/*/assets/*.png",
    "benchmarks/*/assets/*.qpy",
    "benchmarks/*/assets/*.npy",
    "benchmarks/*/assets/*.txt",
    "benchmarks/*/assets/*/*.qpy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
#    "--cov=apps_benchmark",
#    "--cov-report=term-missing",
#    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps_benchmark", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter/manual review)
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = ["qiskit", "qiskit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qiskit_aer"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*"]
ignore_missing_imports = true
